changed env variables for database, added delete table method

--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
-DATABASE_URL="postgres://kenwbaax:pZ1k-vqUV3IooJ9QW_qTqOfoNfsI5UwF@batyr.db.elephantsql.com/kenwbaax"
-DATABASE_URL_DEVELOPMENT="postgres://wougvjxk:S62kPLh-hFvxoat9664fW2OQglcPW2hB@batyr.db.elephantsql.com/wougvjxk"
-DATABASE_URL_TEST="postgres://parkfxrk:vBYmxoVoYQffswD7fZ3wjcIVANaCa8mk@batyr.db.elephantsql.com/parkfxrk"
-DATABASE_URL_PREVIEW="postgres://uhmoqzte:Ql-pNWHARm3i2hwgokShgypCYNdkV6v_@batyr.db.elephantsql.com/uhmoqzte"
+DATABASE_URL=""
+DATABASE_URL_DEVELOPMENT="postgres://ufnadyog:KZXpqhHzANFozbLlojJgxGutOtu0bTUT@chunee.db.elephantsql.com/ufnadyog"
+DATABASE_URL_TEST=""
+DATABASE_URL_PREVIEW=""
 LOG_LEVEL=info
-NODE_ENV="production"
+NODE_ENV="development"
