--- a/vercel.json
+++ b/vercel.json
@@ -2,17 +2,15 @@
   "version": 2,
   "builds": [
     {
-      "src": "./src/app.js",
+      "src": "public/index.js",
       "use": "@vercel/node"
-    }
+    },
+    { "src": "public/**/*.json", "use": "@vercel/static" }
   ],
   "routes": [
     {
-      "src": "/.*",
-      "dest": "/src/app.js"
+      "src": "/(.*)",
+      "dest": "public/index.js"
     }
-  ],
-  "env": {
-    "NODE_ENV": "production"
-  }
+  ]
 }
