move api directory

--- a/vercel.json
+++ b/vercel.json
@@ -1,16 +1,3 @@
 {
-  "version": 2,
-  "builds": [
-    {
-      "src": "public/index.js",
-      "use": "@vercel/node"
-    },
-    { "src": "public/**/*.json", "use": "@vercel/static" }
-  ],
-  "routes": [
-    {
-      "src": "/(.*)",
-      "dest": "public/index.js"
-    }
-  ]
+  "rewrites": [{ "source": "/api/(.*)", "destination": "/api" }]
 }
