--- a/package.json
+++ b/package.json
@@ -2,15 +2,15 @@
   "name": "starter-restaurant-reservation-back-end",
   "version": "1.0.0",
   "description": "Starter code for restaurant reservation backend",
-  "main": "api/server.js",
+  "main": "index.js",
   "repository": {
     "type": "git",
     "url": "https://github.com/Thinkful-Ed/starter-restaurant-reservation",
     "directory": "/back-end"
   },
   "scripts": {
-    "start": "node api/server.js",
-    "start:dev": "nodemon api/server.js",
+    "start": "node index.js",
+    "start:dev": "nodemon index.js",
     "test": "npx cross-env LOG_LEVEL=warn jest --runInBand --detectOpenHandles --forceExit",
     "test:1": "npm run test -- us-01",
     "test:2": "npm run test -- us-02",
@@ -31,13 +31,16 @@
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "husky": "^8.0.1",
     "knex": "^0.21.12",
     "nanoid": "^3.1.20",
     "npm-run-all": "^4.1.5",
     "pg": "^8.5.1",
     "pino": "^6.11.0",
     "pino-http": "^5.3.0",
-    "pino-pretty": "^4.3.0"
+    "pino-pretty": "^4.3.0",
+    "ts-node": "^10.9.1",
+    "typescript": "^4.8.3"
   },
   "devDependencies": {
     "jest": "^26.6.3",
