--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "test:8": "npm run test -- us-08",
     "test:drop-database": "node test/drop-database",
     "test:start": "npx cross-env LOG_LEVEL=warn NODE_ENV=test npm run test:start:run",
-    "test:start:run": "run-s test:drop-database start "
+    "test:start:run": "run-s test:drop-database start ",
+    "prepare": "husky install"
   },
   "keywords": [],
   "author": "",
