--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
     "directory": "/back-end"
   },
   "scripts": {
-    "start": "node index.js",
+    "start": "ts-node index.ts",
     "build": "yarn tsc",
-    "start:dev": "nodemon index.js",
+    "start:dev": "nodemon index.ts",
     "test": "npx cross-env LOG_LEVEL=warn jest --runInBand --detectOpenHandles --forceExit",
     "test:1": "npm run test -- us-01",
     "test:2": "npm run test -- us-02",
@@ -45,6 +45,8 @@
     "typescript": "^4.8.3"
   },
   "devDependencies": {
+    "@types/jest": "^29.0.0",
+    "@types/supertest": "^2.0.12",
     "jest": "^26.6.3",
     "nodemon": "^2.0.6",
     "supertest": "^6.1.1"
