--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,37 +1,22 @@
-
-
 {
-    "compilerOptions": {
-      "allowSyntheticDefaultImports": true,
-      "declaration": false,
-      "emitDecoratorMetadata": true,
-      "experimentalDecorators": true,
-      "lib": [
-        "dom",
-        "es2015"
-      ],
-      "module": "CommonJS",
-      "esModuleInterop": true,
-      "moduleResolution": "node",
-      "sourceMap": true,
-      "target": "es5",
-      "typeRoots": [
-        "../node_modules/@types"
-      ],
-      "outDir": "public",
-      "resolveJsonModule": true
-    },
-    "assets": [
-      "**/*.crt"
-    ],
-    "include": [
-      "api/**/*.ts",
-      "api/**/*.json",
-      "index.ts"
-    ],
-    "exclude": [
-      "node_modules",
-      "api/**/*.spec.ts"
-    ],
-    "compileOnSave": false,
-  }
+  "compilerOptions": {
+    "types": ["jest"],
+    "allowSyntheticDefaultImports": true,
+    "declaration": false,
+    "emitDecoratorMetadata": true,
+    "experimentalDecorators": true,
+    "lib": ["dom", "es2015"],
+    "module": "CommonJS",
+    "esModuleInterop": true,
+    "moduleResolution": "node",
+    "sourceMap": true,
+    "target": "es5",
+    "typeRoots": ["../node_modules/@types"],
+    "outDir": "public",
+    "resolveJsonModule": true
+  },
+  "assets": ["**/*.crt"],
+  "include": ["api/**/*.ts", "api/**/*.json", "index.ts", "test/*.ts"],
+  "exclude": ["node_modules", "api/**/*.spec.ts"],
+  "compileOnSave": false
+}
