--- a/package.json
+++ b/package.json
@@ -13,16 +13,16 @@
     "build": "yarn tsc",
     "start:dev": "nodemon index.ts",
     "test": "npx cross-env LOG_LEVEL=warn jest --runInBand --detectOpenHandles --forceExit",
-    "test:1": "npm run test -- us-01",
-    "test:2": "npm run test -- us-02",
-    "test:3": "npm run test -- us-03",
-    "test:4": "npm run test -- us-04",
-    "test:5": "npm run test -- us-05",
-    "test:6": "npm run test -- us-06",
-    "test:7": "npm run test -- us-07",
-    "test:8": "npm run test -- us-08",
+    "test:1": "yarn run test -- us-01",
+    "test:2": "yarn run test -- us-02",
+    "test:3": "yarn run test -- us-03",
+    "test:4": "yarn run test -- us-04",
+    "test:5": "yarn run test -- us-05",
+    "test:6": "yarn run test -- us-06",
+    "test:7": "yarn run test -- us-07",
+    "test:8": "yarn run test -- us-08",
     "test:drop-database": "node test/drop-database",
-    "test:start": "npx cross-env LOG_LEVEL=warn NODE_ENV=test npm run test:start:run",
+    "test:start": "npx cross-env LOG_LEVEL=warn NODE_ENV=test yarn run test:start:run",
     "test:start:run": "run-s test:drop-database start ",
     "prepare": "husky install"
   },
